Lekce 01 spravna reference na knihu prof. Pattersona

--- a/01-intro/lekce01-intro.tex
+++ b/01-intro/lekce01-intro.tex
@@ -162,7 +162,9 @@ Pokud Vás tento předmět zaujme, tak na něj navazují tyto předměty:
 \begin{frame}
 \frametitle{Materiály k předmětu}
 \begin{itemize}
-\item Paterson, D., Hennessey, V.: Computer Organization and Design, The HW/SW Interface. Elsevier, ISBN: 978-0-12-370606-5 (dostupná v knihovně FEL)
+\item PATTERSON, David A. a John L. HENNESSY. Computer organization and design RISC-V edition:
+    the hardware/software interface. Second Edition. Cambridge: Elsevier, [2021].
+    ISBN 978-0-12-820331-6. (12 kusů v ústřední knihovně ČVUT)
 \item web:
 \begin{itemize}
 \item https://cw.fel.cvut.cz/b192/courses/b35apo/
